<resources>
    <string name="app_name">FFDS</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="direct">Direct</string>
    <string name="logo">Logo</string>
    <string name="feed">Feed</string>
    <string name="no_matches_found">No matches found :(</string>
    <string name="no_matches">You don\'t have any new matches.</string>
    <string name="no_messages">You don\'t have any messages yet.\nSend your match a message.</string>
    <string name="messages">Messages</string>
    <string name="name">Name</string>
    <string name="baseUrl">https://ffds-backend.herokuapp.com/</string>
    <string name="reject_icon">Reject Icon</string>
    <string name="accept_icon">Accept Icon</string>
    <string name="show_profile">Show Profile</string>
    <string name="match_found">Match Found</string>
    <string name="send_message">Send Message</string>
    <string name="submit">SUBMIT</string>
    <string name="saving">Saving…</string>
    <string name="uploading">Uploading…</string>
</resources>
