<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED000000">

    <ImageView
        android:id="@+id/top_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_icon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/feed"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matches_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feed"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/no_matches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="casual"
        android:text="@string/no_matches_found"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="italic"
        android:visibility="invisible" />


</RelativeLayout>