<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED000000"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/profileImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_icon"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_icon">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage1"
            android:layout_width="144dp"
            android:layout_height="130dp"
            android:src="@drawable/re"
            android:layout_marginStart="30dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage2"
            android:layout_width="144dp"
            android:layout_height="130dp"
            android:src="@drawable/re"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImages"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImages">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/match_found"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <Button
            android:id="@+id/sendMessage"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_back"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/send_message"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/showProfile"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_back2"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/show_profile"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>